tests/fixtures/errors/undefined_variable.gbl

func main(): int {
    io.print(undefined_var)
    return 0
}
